Allocation failure injection machinery